fix alignment of burger button

--- a/assets/1.scss
+++ b/assets/1.scss
@@ -236,6 +236,7 @@ html, body {
     margin: 1.0rem;
     margin-right: 1.5rem;
     margin-bottom: 0;
+    margin-top: 0;
     justify-self: end;
 
     @media #{$desktop} {
